sidebar element added to artwork page. page is not responsive at all, artwork is not correctly viewable below a certain browser size or on mobile. need to work on this

--- a/styles/Artwork.module.css
+++ b/styles/Artwork.module.css
@@ -3,5 +3,8 @@
    width: 100vw;
    background-color: brown;
    display: flex;
+}
+
+.image_content {
    justify-content: center;
 }
